# cookbooks

./: README.md
arrow/add-compute-fn/: example.cc  example.hpp  meson.build  recipe.cc  recipe.hpp  simple-main.cc  simpletest.cc  support.cc  support.hpp
arrow/compute-api/: README.md  index.cpp  meson.build  recipe.cpp  recipe.hpp
arrow/hash-functions/: README.md  hash.cpp  meson.build  recipe.cpp  recipe.hpp
arrow/ipc-dict-array/: datatypes.hpp  ipc_dict_array.cpp  main.cpp  meson.build  reader.cpp  recipe.cpp  recipe.hpp  storage.cpp  writer.cpp
arrow/projection/: meson.build  project_from_dataset.cpp  recipe.hpp  storage.cpp
ceph/: admin.md
flight/example_dbservice/: .gitattributes  pyproject.toml
flight/example_dbservice/example/: __init__.py  clients.py  executor.py  recipes.py  services.py  storage.py
flight/example_dbservice/resources/data/: sampledata.0.csv  sampledata.1.csv  sampledata.2.csv  sampledata.3.csv  sampledata.csv
flight/example_dbservice/resources/data/db/: placeholder.txt
flight/example_dbservice/resources/examples/: average-expression.substrait  average-expression.substrait.txt  summary-stats.substrait  summary-stats.substrait.txt
flight/example_dbservice/toolbox/: execute-substrait.py  read-substrait.py  start_service  write-substrait
mermaid/: test.md
